# NeonPlatform

./: .gitmodules  CMakeLists.txt
core/: NeonCommon.h
interfaces/: INeonPlugin.h
plugins/NeonRender/: NeonRender.cpp
plugins/NeonWindow/: NeonWindow.cpp
